[build-system]
requires = [
    "setuptools >= 65",
    "wheel >= 0.38",
]
build-backend = "setuptools.build_meta"

[project]
name = "proto_ros"
version = "0.1.0"
description = "Translations between Protobuf and ROS message definitions"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.md"}
authors = [{name = "Eric Dortmans", email = "eric.dortmans@gmail.com"}]
urls = {source = "https://github.com/dortmans/proto_ros"}

keywords = [
    "protobuf",
    "proto",
    "ros",
    "msg",
    "translation",
    "parser",
    "grammar",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy >= 1.24.1",
    "parsimonious >= 0.10.0",
    "protobuf >= 3.6.1",
]
[project.scripts]
proto2msg = "proto_ros.proto2msg:main"
msg2proto = "proto_ros.msg2proto:main"
protoc-gen-msg = "proto_ros.protoc_gen_msg:main"
protoc-gen-json = "proto_ros.protoc_gen_json:main"

